--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,9 @@
 name: CI/CD Development
-on :
+on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   workflow_dispatch:
 
@@ -13,28 +13,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: get latest code
-      uses: actions/checkout@v3
+      - name: get latest code
+        uses: actions/checkout@v3
 
-    - name: FTP Deploy
-    # You may pin to the exact commit or the version.
-    # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
-      uses: SamKirkland/FTP-Deploy-Action@v4.0.0
-      with:
-        # ftp server
-        server: konsera.kaitodecode.com
-        # ftp username
-        username: adi@konsera.kaitodecode.com
-        # ftp password
-        password: TVEjE1Xeg5uY
-        # Server port to connect to (read your web hosts docs)
-        port: 21
-        # protocol to deploy with - ftp, ftps, or ftps-legacy
-        protocol: ftp
-        # An array of glob patterns, these files will not be included in the publish/delete process
-        exclude: |
-          */.git
-          */.git/**
-          */node_modules/*
-          */vendor/*
-          */storage/imports/*
+      - name: FTP Deploy
+        # You may pin to the exact commit or the version.
+        # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
+        uses: SamKirkland/FTP-Deploy-Action@v4.0.0
+        with:
+          # ftp server
+          server: ${{ secrets.FTP_SERVER }}
+          # ftp username
+          username: ${{ secrets.FTP_USERNAME }}
+          # ftp password
+          password: ${{ secrets.FTP_PASSWORD }}
+          # Server port to connect to (read your web hosts docs)
+          port: 21
+          # protocol to deploy with - ftp, ftps, or ftps-legacy
+          protocol: ftp
+          # An array of glob patterns, these files will not be included in the publish/delete process
+          exclude: |
+            */.git
+            */.git/**
+            */node_modules/*
+            */vendor/*
+            */storage/imports/*
