--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,6 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
   workflow_dispatch:
 
 jobs:
@@ -17,24 +16,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: FTP Deploy
-        # You may pin to the exact commit or the version.
-        # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
-        uses: SamKirkland/FTP-Deploy-Action@v4.0.0
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
-          # ftp server
           server: ${{ secrets.FTP_SERVER }}
-          # ftp username
           username: ${{ secrets.FTP_USERNAME }}
-          # ftp password
           password: ${{ secrets.FTP_PASSWORD }}
-          # Server port to connect to (read your web hosts docs)
-          port: 21
-          # protocol to deploy with - ftp, ftps, or ftps-legacy
           protocol: ftp
-          # An array of glob patterns, these files will not be included in the publish/delete process
+          local-dir: ./
+          server-dir: public_html/konsera.kaitodecode.com
           exclude: |
-            */.git
-            */.git/**
-            */node_modules/*
-            */vendor/*
-            */storage/imports/*
+            .git*
+            node_modules*
+            vendor*
+            storage/imports*
