--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftp
           local-dir: ./
-          server-dir: public_html/konsera.kaitodecode.com
+          server-dir: public_html/konsera.kaitodecode.com/
           exclude: |
             .git*
             node_modules*
